--- a/BaseProject/src/main/resources/templates/fragments/layout.html
+++ b/BaseProject/src/main/resources/templates/fragments/layout.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
     <!--
         ===
@@ -22,25 +24,25 @@
     <meta name="author" content="Muhammad Usman"/>
 
     <!-- The styles -->
-    <link id="bs-css" href="css/bootstrap-cerulean.min.css" rel="stylesheet"/>
+    <link id="bs-css" href="/css/bootstrap-lumen.min.css" rel="stylesheet"/>
 
-    <link href="css/charisma-app.css" rel="stylesheet"/>
-    <link href='bower_components/fullcalendar/dist/fullcalendar.css' rel='stylesheet'/>
-    <link href='bower_components/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print'/>
-    <link href='bower_components/chosen/chosen.min.css' rel='stylesheet'/>
-    <link href='bower_components/colorbox/example3/colorbox.css' rel='stylesheet'/>
-    <link href='bower_components/responsive-tables/responsive-tables.css' rel='stylesheet'/>
-    <link href='bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' rel='stylesheet'/>
-    <link href='css/jquery.noty.css' rel='stylesheet'/>
-    <link href='css/noty_theme_default.css' rel='stylesheet'/>
-    <link href='css/elfinder.min.css' rel='stylesheet'/>
-    <link href='css/elfinder.theme.css' rel='stylesheet'/>
-    <link href='css/jquery.iphone.toggle.css' rel='stylesheet'/>
-    <link href='css/uploadify.css' rel='stylesheet'/>
-    <link href='css/animate.min.css' rel='stylesheet'/>
+    <link href="/css/charisma-app.css" rel="stylesheet"/>
+    <link href="/bower_components/fullcalendar/dist/fullcalendar.css" rel='stylesheet'/>
+    <link href="/bower_components/fullcalendar/dist/fullcalendar.print.css" rel='stylesheet' media='print'/>
+    <link href="/bower_components/chosen/chosen.min.css" rel='stylesheet'/>
+    <link href="/bower_components/colorbox/example3/colorbox.css" rel='stylesheet'/>
+    <link href="/bower_components/responsive-tables/responsive-tables.css" rel='stylesheet'/>
+    <link href="/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" rel='stylesheet'/>
+    <link href="/css/jquery.noty.css" rel='stylesheet'/>
+    <link href="/css/noty_theme_default.css" rel='stylesheet'/>
+    <link href="/css/elfinder.min.css" rel='stylesheet'/>
+    <link href="/css/elfinder.theme.css" rel='stylesheet'/>
+    <link href="/css/jquery.iphone.toggle.css" rel='stylesheet'/>
+    <link href="/css/uploadify.css" rel='stylesheet'/>
+    <link href="/css/animate.min.css" rel='stylesheet'/>
 
     <!-- jQuery -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="/bower_components/jquery/jquery.min.js"></script>
 
     <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -55,7 +57,7 @@
 <body>
     <!-- topbar starts -->
     <div class="navbar navbar-default" role="navigation">
-		<div th:replace="fragments/navbar :: navbar"></div>
+		<div th:replace="fragments/navbar :: bar"></div>
     </div>
     <!-- topbar ends -->
 <div class="ch-container">
@@ -63,7 +65,7 @@
         
         <!-- left menu starts -->
         <div class="col-sm-2 col-lg-2">
-            <div th:replace="fragments/left-menu :: left-menu"></div>
+            <div th:replace="fragments/menu :: menuLeft"></div>
         </div>
         <!--/span-->
         <!-- left menu ends -->
@@ -118,38 +120,38 @@
 
 <!-- external javascript -->
 
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <!-- library for cookie management -->
-<script src="js/jquery.cookie.js"></script>
+<script src="/js/jquery.cookie.js"></script>
 <!-- calender plugin -->
-<script src='bower_components/moment/min/moment.min.js'></script>
-<script src='bower_components/fullcalendar/dist/fullcalendar.min.js'></script>
+<script src="/bower_components/moment/min/moment.min.js"></script>
+<script src="/bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
 <!-- data table plugin -->
-<script src='js/jquery.dataTables.min.js'></script>
+<script src="/js/jquery.dataTables.min.js"></script>
 
 <!-- select or dropdown enhancer -->
-<script src="bower_components/chosen/chosen.jquery.min.js"></script>
+<script src="/bower_components/chosen/chosen.jquery.min.js"></script>
 <!-- plugin for gallery image view -->
-<script src="bower_components/colorbox/jquery.colorbox-min.js"></script>
+<script src="/bower_components/colorbox/jquery.colorbox-min.js"></script>
 <!-- notification plugin -->
-<script src="js/jquery.noty.js"></script>
+<script src="/js/jquery.noty.js"></script>
 <!-- library for making tables responsive -->
-<script src="bower_components/responsive-tables/responsive-tables.js"></script>
+<script src="/bower_components/responsive-tables/responsive-tables.js"></script>
 <!-- tour plugin -->
-<script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
+<script src="/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
 <!-- star rating plugin -->
-<script src="js/jquery.raty.min.js"></script>
+<script src="/js/jquery.raty.min.js"></script>
 <!-- for iOS style toggle switch -->
-<script src="js/jquery.iphone.toggle.js"></script>
+<script src="/js/jquery.iphone.toggle.js"></script>
 <!-- autogrowing textarea plugin -->
-<script src="js/jquery.autogrow-textarea.js"></script>
+<script src="/js/jquery.autogrow-textarea.js"></script>
 <!-- multiple file upload plugin -->
-<script src="js/jquery.uploadify-3.1.min.js"></script>
+<script src="/js/jquery.uploadify-3.1.min.js"></script>
 <!-- history.js for cross-browser state change on ajax -->
-<script src="js/jquery.history.js"></script>
+<script src="/js/jquery.history.js"></script>
 <!-- application script for Charisma demo -->
-<script src="js/charisma.js"></script>
+<script src="/js/charisma.js"></script>
 
 
 </body>
